aws/ecs/ecs_with_jsonfile_fluentd_collector_s3_endpoint/ecs_with_jsonfile_fluentd_collector_s3_endpoint.yaml
---

AWSTemplateFormatVersion: 2010-09-09

Parameters:

  ECSServerInstanceType:
    Type: String
    Default: t3.medium
    AllowedValues:
      - t3.medium

  ECSServerKeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Default: ecs-fluentd

  ECSServerImageId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id

Mappings: {}

Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/24

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  PublicInternetRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicInternetRouteTable

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicInternetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicSubnet01:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.0.0.0/25
      VpcId: !Ref VPC

  PublicSubnet02:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: 10.0.0.128/25
      VpcId: !Ref VPC

  PublicSubnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicInternetRouteTable
      SubnetId: !Ref PublicSubnet01

  PublicSubnet02RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicInternetRouteTable
      SubnetId: !Ref PublicSubnet02

  ECSServiceIAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceRole

  ECSServerIAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role

  ECSServerInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref ECSServerIAMRole

  ECSCluster:
    Type: AWS::ECS::Cluster

  ECSServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ECS Server Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      VpcId: !Ref VPC

  ECSServerLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        IamInstanceProfile:
          Arn: !GetAtt ECSServerInstanceProfile.Arn
        ImageId: !Ref ECSServerImageId
        InstanceType: !Ref ECSServerInstanceType
        KeyName: !Ref ECSServerKeyName
        NetworkInterfaces:
          # AssociatePublicIpAddress: true would not be common in production
          # environments but is suffecient for developing our own understanding
          - AssociatePublicIpAddress: true
            DeviceIndex: 0
            Groups: [ !GetAtt ECSServerSecurityGroup.GroupId ]
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            cat > /etc/ecs/ecs.config <<EOF
            # the only required logging-driver is json-file but we've elected to stay with defaults
            # ECS_AVAILABLE_LOGGING_DRIVERS=["none", "awslogs", "syslog", "json-file"]
            ECS_CLUSTER=${ECSCluster}
            EOF
            mkdir -p /etc/fluentd/
            cat > /etc/fluentd/fluent.conf <<EOF
            <source>
              @type tail
              # /var/lib/docker/containers/* contains directories named per container
              # example: /var/lib/docker/containers/0f66e53a664aa90b1c708710730bcf5aea6796b34ba82b3ae5893fec0c7659f7
              # inside this container is a json format log file named 
              # 0f66e53a664aa90b1c708710730bcf5aea6796b34ba82b3ae5893fec0c7659f7-json.log
              format json
              path /var/lib/docker/containers/*/*-json.log
              pos_file /fluentd/fluentd-containers.log.pos
              tag docker.container
            </source>
            <match docker.** >
              @type s3
              s3_bucket ${FluentdLogBucket}
              s3_region ${AWS::Region}
              # am setting hostname as part of the "key" format for use
              # with distributed systems - this prevents collisions
              s3_object_key_format %{hostname}%{time_slice}_%{index}.%{file_extension}
            </match>
            EOF

  ECSServerScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      DesiredCapacity: 1
      LaunchTemplate:
        LaunchTemplateId: !Ref ECSServerLaunchTemplate
        Version: !GetAtt ECSServerLaunchTemplate.LatestVersionNumber
      MaxSize: 1
      MinSize: 1
      VPCZoneIdentifier:
        - !Ref PublicSubnet01
        - !Ref PublicSubnet02

  FluentdLogBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256

  # the ManagedPolicy below is copied from
  # https://github.com/fluent/fluent-plugin-s3#iam-policy
  FluentdTaskS3BucketWrite:
    Type: AWS::IAM::ManagedPolicy
    Properties: 
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - s3:ListBucket
            Resource:
              - !Sub ${FluentdLogBucket.Arn}
          - Effect: Allow
            Action:
              - s3:GetObject
              - s3:PutObject
            Resource:
              - !Sub ${FluentdLogBucket.Arn}/*

  FluentdTaskIAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                # https://docs.aws.amazon.com/AmazonECS/latest/developerguide/task_IAM_role.html
                - ecs-tasks.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - !Ref FluentdTaskS3BucketWrite

  FluentdTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        # Image: fluentd does not have the S3 output plugin installed
        # options are to either build an image or use an image that
        # includes the S3 output plugin - govtechsg/fluentd-s3
        - Image: govtechsg/fluentd-s3:fluentd-1.3.2_fluent-plugin-s3-latest
          Memory: 256
          MountPoints:
            # the ContainerPath: /fluentd/etc instead of ContainerPath: /etc/fluentd/
            # is intentional
            - ContainerPath: /fluentd/etc
              ReadOnly: true
              SourceVolume: etc_fluentd
            - ContainerPath: /var/lib/docker/containers
              ReadOnly: true
              SourceVolume: var_lib_docker_containers
          Name: fluentd
          # running as User: root executes the "fluentd" binary as root user (default would be "fluentd")
          # this allows access to directories (such as /var/lib/docker/containers)
          # that are mounted in from the host filesystem to be read by the fluentd process
          # https://github.com/fluent/fluentd-docker-image/issues/48
          User: root
      TaskRoleArn: !Ref FluentdTaskIAMRole
      Volumes:
        - Host:
            SourcePath: /etc/fluentd
          Name: etc_fluentd
        - Host:
            SourcePath: /var/lib/docker/containers
          Name: var_lib_docker_containers

  FluentdService:
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref ECSCluster
      SchedulingStrategy: DAEMON
      TaskDefinition: !Ref FluentdTaskDefinition

  NginxService:
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref ECSCluster
      # note that running nginx with SchedulingStrategy: DAEMON
      # is sufficent for running this particular test
      # but is done only for demonstration purposes
      SchedulingStrategy: DAEMON
      TaskDefinition: !Ref NginxTaskDefinition

  NginxTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - # use DockerLabels to define log entries that
          # will be available to the logdriver
          DockerLabels:
            CONTAINER_NAME: nginx
          Environment:
            - Name: ENVIRONMENT
              Value: test
          Image: nginx
          LogConfiguration:
            LogDriver: json-file
            Options:
              # options makes values from either "DockerLabels" or "Environment"
              # available as "attributes" in the log entry
              # these attributes can be processed by fluentd
              env: ENVIRONMENT
              labels: CONTAINER_NAME
          Memory: 256
          Name: nginx
          PortMappings:
            - ContainerPort: 80
              HostPort: 80
